// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> should match snapshot 1`] = `
<ForwardRef(Input)
  endAdornment={
    <span>
      Test end adornment
    </span>
  }
  id="test-id"
  name="test-name"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  placeholder="Test placeholder"
  startAdornment={
    <span>
      Test start adornment
    </span>
  }
  value="Test text"
>
  <span
    className="input-wrapper field with-start-adornment with-end-adornment"
    onClick={[Function]}
  >
    <span
      className="adornment-container start"
    >
      <span>
        Test start adornment
      </span>
    </span>
    <input
      className="input"
      id="test-id"
      name="test-name"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Test placeholder"
      type="text"
      value="Test text"
    />
    <span
      className="adornment-container end"
    >
      <span>
        Test end adornment
      </span>
    </span>
  </span>
</ForwardRef(Input)>
`;

exports[`<Input /> should render without props 1`] = `
<ForwardRef(Input)>
  <span
    className="input-wrapper field"
    onClick={[Function]}
  >
    <input
      className="input"
      onBlur={[Function]}
      onFocus={[Function]}
      type="text"
    />
  </span>
</ForwardRef(Input)>
`;
